--- a/src/layouts/_default/baseof.html
+++ b/src/layouts/_default/baseof.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-    {{ block "main" . }}{{ end }}
+    <header>
+        {{ partial "header.html" . }}
+    </header>
+
+    <main>
+        {{ block "main" . }}{{ end }}
+    </main>
+
+    <footer>
+        {{ partial "footer.html" . }}
+    </footer>
 </body>
-</html> 
+</html>
